Bug 152763 - Modern IDB: storage/indexeddb/structured-clone.html crashes
Summary: Modern IDB: storage/indexeddb/structured-clone.html crashes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882
  Show dependency treegraph
 
Reported: 2016-01-05 16:14 PST by Brady Eidson
Modified: 2016-01-05 18:08 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (13.68 KB, patch)
2016-01-05 16:19 PST, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-01-05 16:14:33 PST
Modern IDB: storage/indexeddb/structured-clone.html crashes

There's some assumptions in SerializedScriptValue and its CloneDeserializer that the global object is a JSDOMGlobalObject.

This makes sense for the types of values that are WebCore/DOM objects and truly need a DOMGlobalObject, but does not make sense for native Javascript objects like typed arrays.

This patch fixes that for native typed arrays, allowing this test to run.

It also updates an error message, forcing the results for some other tests to also get upgrades.
Comment 1 Brady Eidson 2016-01-05 16:19:30 PST
Created attachment 268337 [details]
Patch v1
Comment 2 WebKit Commit Bot 2016-01-05 18:08:40 PST
Comment on attachment 268337 [details]
Patch v1

Clearing flags on attachment: 268337

Committed r194625: <http://trac.webkit.org/changeset/194625>
Comment 3 WebKit Commit Bot 2016-01-05 18:08:44 PST
All reviewed patches have been landed.  Closing bug.